[gd_scene load_steps=24 format=2]

[ext_resource path="res://Game/CanvasLayer_Ghost.gd" type="Script" id=1]
[ext_resource path="res://imgonline-com-ua-Resize-zWK4nj8RNwgAsbVb.png" type="Texture" id=2]
[ext_resource path="res://Anims/Привидение/Афк/Afkghost1.png" type="Texture" id=3]
[ext_resource path="res://Anims/Привидение/Афк/Afkghost2.png" type="Texture" id=4]
[ext_resource path="res://Anims/Привидение/Афк/Afkghost3.png" type="Texture" id=5]
[ext_resource path="res://Anims/Привидение/Афк/Afkghost4.png" type="Texture" id=6]
[ext_resource path="res://Anims/Привидение/Афк/Afkghost5.png" type="Texture" id=7]
[ext_resource path="res://Anims/Привидение/Вселяется/Vselatsaghost1.png" type="Texture" id=8]
[ext_resource path="res://Anims/Привидение/Вселяется/Vselatsaghost2.png" type="Texture" id=9]
[ext_resource path="res://Ghost_1.gd" type="Script" id=10]
[ext_resource path="res://Anims/Привидение/Вселяется/Vselatsaghost3.png" type="Texture" id=11]
[ext_resource path="res://Anims/Привидение/Вселяется/Vselatsaghost4.png" type="Texture" id=12]
[ext_resource path="res://Anims/Привидение/Вселяется/Vselatsaghost5.png" type="Texture" id=13]
[ext_resource path="res://Anims/Привидение/Вселяется/Vselatsaghost6.png" type="Texture" id=14]
[ext_resource path="res://Anims/Привидение/Вселяется/Vselatsaghost7.png" type="Texture" id=15]
[ext_resource path="res://Anims/Привидение/Движ/MoveGhost1.png" type="Texture" id=16]
[ext_resource path="res://Anims/Привидение/Движ/MoveGhost2.png" type="Texture" id=17]
[ext_resource path="res://Anims/Привидение/Движ/MoveGhost3.png" type="Texture" id=18]
[ext_resource path="res://Anims/Привидение/Движ/MoveGhost4.png" type="Texture" id=19]
[ext_resource path="res://Anims/Привидение/Движ/MoveGhost5.png" type="Texture" id=20]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 13.5 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "moves_in",
"speed": 7.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 23.5, 16.5 )

[node name="Ghost" type="KinematicBody2D"]
position = Vector2( 508, 294 )
z_index = 3
collision_layer = 2147483648
collision_mask = 2147483648
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6.5 )
shape = SubResource( 7 )

[node name="CanvasLayer_Ghost" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer_Ghost"]
position = Vector2( 8, 471 )
scale = Vector2( 1.00781, 1.00781 )
normal = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 5 )
animation = "idle"
flip_h = true

[node name="Camera_Of_Ghost" type="Camera2D" parent="."]
position = Vector2( 18, -85 )
scale = Vector2( 0.496, 0.497 )
current = true
zoom = Vector2( 0.5, 0.5 )
drag_margin_left = 0.36
drag_margin_top = 0.37
drag_margin_right = 0.4
drag_margin_bottom = 0.39

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )

[connection signal="released" from="CanvasLayer_Ghost/TouchScreenButton" to="CanvasLayer_Ghost" method="_on_TouchScreenButton_released"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
